# snowtube

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
.direnv/: flake-profile-12-link
.forgejo/workflows/: test.yml
.github/workflows/: test.yml
common/: Cargo.toml
common/src/: channel.rs  language.rs  lib.rs  relative_time.rs  service.rs  time.rs  video.rs
iced_video_player_ytrs/: Cargo.toml  README.md
iced_video_player_ytrs/src/: pipeline.rs  video.rs  video_player.rs
iceplayer/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
iceplayer/examples/: minimal.rs  youtube.rs
iceplayer/src/: event.rs  led_spectrum.wgsl  led_visualizer.rs  lib.rs  loader.rs  pipeline.rs  shader.wgsl  source.rs  subtitle.rs  video.rs  video_player.rs  visualizer.rs  visualizer.wgsl
iceplayer/src/widget/: controls.rs  mod.rs  overlay.rs  snowflake.rs  snowflake.wgsl  spinner.rs
ptrs-lib/: Cargo.toml
ptrs-lib/src/: client.rs  error.rs  lib.rs  models.rs
snowtube/: Cargo.toml
snowtube/assets/: fallback.svg.license  peertube.svg.license
snowtube/src/: config.rs  helpers.rs  main.rs  messages.rs  providers.rs  theme.rs
snowtube/src/views/: channel.rs  config.rs  mod.rs  search.rs  subscriptions.rs  video.rs
snowtube/src/widgets/: glass.rs  icon_button.rs  icons.rs  mod.rs  tab_bar.rs
src/: client.rs  client_tests.rs  constants.rs  error.rs  lib.rs  locale_map.rs  models.rs  parsers.rs  utils.rs
ytdlp-wrapper/: Cargo.toml
ytdlp-wrapper/src/: cache.rs  lib.rs
ytrs-client/: Cargo.toml
ytrs-client/src/: config.rs  helpers.rs  main.rs  messages.rs  providers.rs  theme.rs
ytrs-client/src/player/: decoder.rs  mod.rs  stream.rs
ytrs-client/src/views/: channel.rs  config.rs  mod.rs  search.rs  subscriptions.rs  video.rs
ytrs-client/src/widgets/: bounceable_scrollable.rs  icon_button.rs  icons.rs  mod.rs  tab_bar.rs  video_player.rs  wrap.rs
ytrs-client/src/widgets/spinner/: circular.rs  easing.rs  mod.rs  shader_spinner.rs  spinner.wgsl
ytrs-lib/: Cargo.toml
ytrs-lib/src/: client.rs  convert.rs  error.rs  lib.rs  locale_map.rs  models.rs  parsers.rs  parsers_tests.rs  provider.rs  relative_time.rs  utils.rs
ytrs-lib/src/cipher/: extractor.rs  mod.rs  player.rs  runtime.rs  tests.rs
