[workspace]
members = ["ytrs-lib", "ytrs-client"]
resolver = "2"

[patch.crates-io]
iced_core = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced_widget = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced_renderer = { git = "https://github.com/iced-rs/iced", branch = "master" }
