[workspace]
members = ["ytrs-lib", "ytrs-client", "iced_video_player"]
resolver = "2"

[patch.crates-io]
iced_core = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced_widget = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced_renderer = { git = "https://github.com/iced-rs/iced", branch = "master" }
