[package]
name = "ytrs-client"
version = "0.1.0"
edition = "2024"
authors = ["ytrs contributors"]
description = "GUI client for ytrs - YouTube search and playback"
license = "GPL-3.0"

[dependencies]
ytrs = { path = ".." }
iced = { git = "https://github.com/iced-rs/iced", branch = "master", features = ["tokio", "image", "lazy"] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", branch = "main", default-features = false, features = ["wrap"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
image = "0.25"
bytes = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
semver = { version = "1", features = ["serde"] }
snafu = "0.8"
