[package]
name = "ytrs-client"
version = "0.3.0"
edition = "2024"
authors = ["ytrs contributors"]
description = "GUI client for ytrs - YouTube search and playback"
license = "GPL-3.0"

[dependencies]
ytrs-lib = { path = "../ytrs-lib" }
iced = { version = "0.14", features = ["tokio", "image", "lazy", "advanced", "wgpu", "debug", "canvas"], default-features = false }
iced_video_player = { path = "../iced_video_player_ytrs"}
url = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
image = "0.25"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
semver = { version = "1", features = ["serde"] }
snafu = "0.8"
strum = { version = "0.27", features = ["derive"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
bytemuck = { version = "1", features = ["derive"] }
