[package]
name = "ytrs-lib"
version = "0.3.0"
edition = "2024"
authors = ["ytrs contributors"]
description = "A Rust client for YouTube's private InnerTube API"
license = "GPL-3.0"
repository = "https://github.com/mtl/ytrs"
keywords = ["youtube", "api", "innertube", "video"]
categories = ["api-bindings", "web-programming"]

[dependencies]
common = { path = "../common" }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.7.0"
